was broken on mobile, now fixed

--- a/styles.css
+++ b/styles.css
@@ -57,9 +57,11 @@ button, .button {
 .header-container {
     background-color: var(--foreground-color);
     color: var(--text-color);
-    width: 1000px;
-    margin: 0 auto;
-    padding: 15px 0 10px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    padding: 15px 0 10px 0;
     box-shadow: var(--shadow);
     text-align: center;
 }
